# ZKMath

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  install_manifest.txt
emp-zk/: emp-zk.h
emp-zk/edabit/: edabits.h
emp-zk/emp-zk-arith/: ostriple.h  polynomial.h  zk_fp_exec.h  zk_fp_exec_prover.h
emp-zk/emp-zk-bool/: ostriple.h  zk_bool_circuit_exec.h  zk_prover.h
emp-zk/emp-zk-math/: LUT-range.h  LUT.h  ZKmath-global.cpp  ZKmath-global.h
emp-zk/extensions/: floats.h
emp-zk/extensions/ram-zk/: ostriple.h  poly_prdt.h  ro-zk-mem.h
src/emp-zk-math/: LUT-twoValue.h  ZKmath-functions.cpp  ZKmath-functions.h  ZKmath-global.h
test/: CMakeLists.txt  CTestTestfile.cmake
test/arith/: Mys_div.cpp  Mys_exp_exact.cpp  Mys_gelu.cpp  Mys_layernorm.cpp  Mys_maxpool.cpp  Mys_relu.cpp  Mys_rsqrt.cpp  Mys_sigmoid.cpp  Mys_softmax.cpp  Mys_truncation.cpp  abconversion.cpp  apprDiv.cpp  div_inverse.cpp  div_noinverse.cpp  fc.cpp  negExp.cpp  polynomial.cpp  rsqrt.cpp  softmax.cpp  truncation_fixed.cpp
test/bool/: example.cpp  inner_prdt.cpp  polynomial.cpp
test/math/: LUT.cpp  LUTRange.cpp  cmpRealPositive.cpp  cmpRealVrfyP.cpp  cmpRealVrfyPositive.cpp  div.cpp  exp.cpp  extend.cpp  gelu.cpp  generalTruncation.cpp  layernorm.cpp  max.cpp  msnzb.cpp  positiveDigDecAny.cpp  positiveTruncation.cpp  relu.cpp  rsqrt.cpp  sigmoid.cpp  softmax.cpp
test/ram/: LUT_boolean.cpp  ro_ram_test.cpp
